Fixed Nav bar spacing

--- a/houses/static/houses/base.css
+++ b/houses/static/houses/base.css
@@ -82,6 +82,7 @@ a {
 }
 
 .nav-bar ul{
+    font-size: 0;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -91,6 +92,7 @@ a {
 }
 
 .nav-bar li{
+    font-size: 16px;
     display: inline-flex;
     flex: 1;
     height: 100%;
